<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"

    tools:context=".ColorByImage">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#16DFDF"
        app:title="Get Color By Image"
        app:titleTextColor="#FFFFFF">


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageWallpaper"
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="200dp"
                android:src="@drawable/backdeveloper"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:textColor="#000000"
                android:background="#16DFDF"
                android:padding="20dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="Choose Image"/>

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/vibrantView"
                style="@style/textStyle"
                android:textColor="#000000"
                android:text="@string/vibrant" />

            <TextView
                android:textColor="#000000"
                android:id="@+id/vibrantLightView"
                style="@style/textStyle"
                android:text="@string/vibrant_light" />

            <TextView
                android:id="@+id/vibrantDarkView"
                style="@style/textStyle"
                android:textColor="#000000"
                android:text="@string/vibrant_dark" />

            <TextView
                android:id="@+id/mutedView"
                style="@style/textStyle"
                android:textColor="#000000"
                android:text="@string/muted" />

            <TextView
                android:id="@+id/mutedLightView"
                style="@style/textStyle"
                android:textColor="#000000"
                android:text="@string/muted_light" />

            <TextView
                android:id="@+id/mutedDarkView"
                style="@style/textStyle"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:text="@string/muted_dark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:padding="10dp"
                android:text="Some Instructions"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:padding="10dp"
                android:text="-It extract main 6 colors in Hex format."/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:padding="10dp"
                android:text="-First 2 Letters (In most cases 'FF' shows opacity of color.)"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:padding="10dp"
                android:text="-After extraction of color from choosen image, if some of the colors are absence, then placeholder color will display which is White (#ffffff)"/>

        </LinearLayout>


    </ScrollView>

</RelativeLayout>