<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    tools:context=".ColorByHexaDecimal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#16DFDF"
        app:title="Get Color By HexaDecimal Value"
        app:titleTextColor="#FFFFFF">


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout_1"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:layout_margin="10dp"

            android:src="@drawable/colorinfo"
            />

        <EditText
            android:id="@+id/color_edit_value"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:theme="@style/mytheme"
            android:maxLength="6"
            android:hint="Enter Color Value..."
            android:inputType="text"
            android:digits="0123456789ABCDEFabcdef"
            android:textColor="@android:color/background_dark"
            android:textColorHint="#000000"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_information"
            android:layout_marginLeft="20dp"
            android:background="#000000"
            android:textColor="#FFFFFF"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Small"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:id="@+id/load_information"
            />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_color_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:text="@string/color_name"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/color_txt_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:text="@string/color_value"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/color_txt_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:text="@string/rgb_value"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/r_g_b_txt_color_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:text="@string/h_s_l_color_value"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/h_s_l_color_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:text="@string/hsv_value"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/h_s_v_color_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="50"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/cardbackgroundcolorset"
                app:cardElevation="5dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>